# ett_gns

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run.py  run.sh  sample.env
.agent/: DEPLOYMENT_STATUS.md  EXECUTION_PLAN.md  HANDOFF.md  PROJECT_STATE.md  TASKS.md
.agent/skills/: GNS_CORE_STABILIZATION_COMPLETE_PROMPT.md
.github/workflows/: ci.yml  deploy-prod.yml  deploy-production.yml  (+2 more)
admin/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
docs/: FEATURE_COMPLETION_MATRIX.md  GNS_CORE_SECURITY_VERIFICATION.md  GNS_CORE_STABILIZATION_MATRIX.md  GNS_CORE_STABILIZATION_REPORT.md  IN_APP_NOTIFICATIONS_COMPLETION_REPORT.md  IN_APP_NOTIFICATIONS_IMPLEMENTATION_MATRIX.md  SECURITY_VERIFICATION.md  admin-onboarding.md  api.md  architecture.md  channel-development.md  configuration.md  credentials.md  deployment.md  in-app-api.md  in-app-architecture.md  in-app-deployment.md  in-app-overview.md  in-app-preferences.md  in-app-react.md  in-app-sdk.md  in-app-security.md  in-app-sse.md  in-app-targeting.md  in-app-testing.md  in-app-troubleshooting.md  local-development.md  operations.md  provider-development.md  provider-management.md  release-checklist.md  security.md  send-first-notification.md  smtp-setup.md  template-system.md  testing.md  troubleshooting.md
ett_gns_app/: __init__.py  api.py  callbacks.py  cli.py  config.py  database.py  delivery.py  gns_config.py  gns_constant.py  gns_controller.py  gns_routes.py  in_app.py  main.py  management_api.py  models.py  observability.py  operations_api.py  quotas.py  resolution.py  schemas.py  secrets.py  security.py  settings.py  tasks.py  template_service.py
examples/: __init__.py  api_examples.py
gns_product_design/: 01_PRD.md  02_FRD.md  03_HLD.md  04_LLD.md  05_API_DESIGN.md  06_DATA_MODEL.md  07_SECURITY_MULTI_TENANCY.md  08_CHANNELS_AND_PROVIDERS.md  09_RELIABILITY_SCALE.md  10_TEMPLATE_SYSTEM.md  11_OBSERVABILITY_OPERATIONS.md  12_DEPLOYMENT_TESTING_ROADMAP.md  13_TECH_STACK_AND_ENGINEERING_STANDARDS.md  README.md  docker-compose.example.yml  sample.env
load-tests/: acceptance.js  idempotency.js  in-app-sse.js
migrations/: env.py
observability/: grafana-dashboard.json
templates/: inquiry.html  password_reset.html  universal_template.html  welcome_email.html
tests/: __init__.py  conftest.py  test_adapters.py  test_callbacks_operations.py  test_control_plane.py  test_delivery.py  test_email_service.py  test_in_app.py  test_resolution.py  test_runtime.py  test_templates_providers.py
(+41 files in other folders)
